fix overlay layout bug

--- a/v3/sidebar.css
+++ b/v3/sidebar.css
@@ -145,6 +145,7 @@ span {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 9;
   min-width: 100vw;
   min-height: 100dvh;
   margin: 0;
